cv final update

--- a/Exercices/creez-votre-cv/index.html
+++ b/Exercices/creez-votre-cv/index.html
@@ -5,5 +5,82 @@
     <title>Mon C.V</title>
     <link href="style.css" media="all" rel="stylesheet" type="text/css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <section>
+        <div>
+          <div><img srcset="regine.jpg" alt="image"></div>
+          <br>
+        </div>
+        <div>
+          <div class="my_name">Ituze Regine</div>
+          <div class="my_tite">Currently doing  training in web development and design
+          </div>
+          <div class="item">
+            <ul>
+              <li>address:belgium-liége</li>
+              <li>tel:+32485993185</li>
+              <li>Email:ituzeregine76@gmail.com</li>
+            </ul>
+          </div>
+          <p class="item">for me there is no greater reason why  i love coding,I just really enjoy it.
+            I enjoy the mental challenge of creating  and using codes to solve problems or to create something.
+            i have always had a passion of coding and it have always been my dream career
+          </p>
+        </div>
+      </section>
+      <section>
+        <div class="section-title">Education </div>
+        <div>
+        <div class="edication-container">
+            <ul>
+          <li>
+            <div class="date">febury 2019-May 2019</div>
+            <div class="info">
+              <p class="semi-bold">haute ecole condorcet(belgium-tournai)<br> of E-business</p>
+            </div>
+          </li>
+            <li>
+              <div class="date">2013_2016</div>
+              <div class="info">
+                <p class="semi-bold">Advanced Diploma in Electronics and Telecommunications<br>
+                  Rwanda Polytechnic</p>
+              </div>
+            </li>
+            <li>
+            <div class="date">2010_2010</div>
+              <div class="info">
+                <p class="semi-bold">Math-Physics-Geography<br>
+                  lycée de Kigali(Rwanda)</p>
+              </div>
+            </li>
+          </ul>
+          </div><!--end edication-container-->
+        </div>
+      </section>
+      <section>
+        <div class="section-title">Skills</div>
+        <div>
+        <div class="skills-container">
+            <ul>
+              <li>Networking</li>
+              <li>Critical Skills</li>
+              <li>aurdino</li>
+            </ul>
+          </div><!--end skills-container-->
+        </div>
+      </section>
+      <section>
+        <div class="section-title">Languages</div>
+        <div>
+        <div class="Languages-container">
+            <ul>
+              <li>kinyarwnanda</li>
+              <li>English</li>
+              <li>Fench</li>
+            </ul>
+          </div><!--end Languages-container-->
+        </div>
+      </section>
+  </body>
 </html>
